[build-system]
requires = [
    "hatchling>=0.13.0",
]
build-backend = "hatchling.build"

[project]
name = "datadog-esxi-alt"
description = "The ESXi_Alt check"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "esxi_alt",
]
authors = [
    { name = "Tony Nguyen", email = "ntbquoc2015@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-checks-base>=32.6.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = [
    "pysocks==1.7.1",
    "pyvmomi==8.0.3.0.1",
]

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/esxi_alt/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/esxi_alt",
]
dev-mode-dirs = [
    ".",
]
